maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:72: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.JediEscaper'
override def run() {
             ^